fix sidebar z-index

--- a/css/style-basic.css
+++ b/css/style-basic.css
@@ -23,7 +23,7 @@ scroll-behavior: smooth;
 }
 
 .w3-sidebar{
-  z-index: 100;
+  z-index: 1000;
 }
 
 .logo{
